Dear ImGui Test Engine
CHANGELOG

** Test Engine is regularly updated to support recent Dear ImGui version, when a change is required.
   Those changes are not all listed here.
** For a while this is going to ONLY INCLUDE BREAKING CHANGES.

2025/10/01:
- TestEngine: fixed recovering from situation where TestFunc changed current context.

2025/09/22:
- TestEngine: added test_io.ConfigLogToFunc hook to serially log all output (rather than
  peeking into the individual log output of each test).
- TestEngine: using ImGuiTestFlags_NoRecoveryWarnings also mute log.

2025/09/09:
- TestEngine: fixed ctx->ComboXXX functions for cases where the Combo selectables are
  using ImGuiSelectableFlags_NoAutoClosePopups or setting ImGuiItemFlags_AutoClosePopups=false.

2025/08/22:
- TestEngine: fixed issues interaction with clipped table headers.
- TestEngine: added ctx->ScrollToPos(), ScrollToPosX(), ScrollToPosY() helpers.

2025/08/11:
- TestEngine: error when it is detected that main imgui library has not been
  compiled with IMGUI_ENABLE_TEST_ENGINE. (#80)
- TestEngine: detect mismatching build issue when ImGui compiled struct layout does not
  match one seen by test engine.

2025/04/24:
- TestEngine: fixed crash/issue in capture tool.

2025/03/17:
- TestEngine: *BREAKING* reworked ImGuiTestEngine_GetResult() as ImGuiTestEngine_GetResultSummary()
  outputting a structure where we can add more fields.
    Prev:  void ImGuiTestEngine_GetResult(ImGuiTestEngine* engine, int& count_tested, int& count_success);
    Now:   void ImGuiTestEngine_GetResultSummary(ImGuiTestEngine* engine, ImGuiTestEngineResultSummary* out_result);
  New structure include the number of tests remaining in queue (for when aborting or crashing).
- TestEngine: helper crash handler installed by ImGuiTestEngine_InstallDefaultCrashHandler()
  always print a crash string and extra info, even if result export settings are set to None.

2025/03/11:
- TestEngine: fixes various small issues compiling on game consoles.
