@@ -5,6 +5,9 @@ CHANGELOG
    Those changes are not all listed here.
 ** For a while this is going to ONLY INCLUDE BREAKING CHANGES.
 
+2025/10/08:
+- TestEngine: IM_CHECK_FLOAT_xx compare operators using epsilon now display input values
+  in the log instead of the fabs(a-b) result.
 2025/10/01:
 - TestEngine: fixed recovering from situation where TestFunc changed current context.
 
